--- a/package.json
+++ b/package.json
@@ -25,13 +25,20 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@mdxeditor/editor": "^3.21.0",
+    "@radix-ui/react-slot": "^1.1.1",
+    "class-variance-authority": "^0.7.1",
     "fs-extra": "^11.3.0",
-    "jotai": "^2.11.1"
+    "jotai": "^2.11.1",
+    "lucide-react": "^0.474.0",
+    "shadcn-ui": "^0.9.4",
+    "tailwind-variants": "^0.3.1",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^2.0.0",
     "@electron-toolkit/eslint-config-ts": "^2.0.0",
     "@electron-toolkit/tsconfig": "^1.0.1",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^20.14.8",
     "@types/react": "^18.3.3",
