--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@electron-toolkit/preload": "^3.0.1",
     "@electron-toolkit/utils": "^3.0.0",
     "@mdxeditor/editor": "^3.21.0",
+    "electron-log": "^5.3.0",
+    "electron-updater": "^6.3.9",
     "fs-extra": "^11.3.0",
     "jotai": "^2.11.1"
   },
