--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,8 +28,10 @@ jobs:
         id: create_tag
         run: |
           $VERSION = (Get-Content package.json | ConvertFrom-Json).version
+          git config --global user.name "GitHub Actions"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git tag "v$VERSION"
-          git push origin "v$VERSION"
+          git push https://github-actions:${{ secrets.TOKEN }}@github.com/KhaledSaeed18/NoteMark.git "v$VERSION"
 
       - name: Create GitHub release
         uses: softprops/action-gh-release@v1
