--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,6 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
 
       - name: Set up Node.js (with Yarn)
         uses: actions/setup-node@v3
@@ -30,21 +32,31 @@ jobs:
           $VERSION = (Get-Content package.json | ConvertFrom-Json).version
           git config --global user.name "GitHub Actions"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          if (git ls-remote --tags origin "refs/tags/v$VERSION" -eq $null) {
+          
+          # Check if tag exists
+          $tagExists = git ls-remote --tags origin "refs/tags/v$VERSION"
+          
+          if ($tagExists) {
+            echo "Tag v$VERSION already exists. Skipping tag creation."
+            echo "TAG_EXISTS=true" >> $env:GITHUB_ENV
+          } else {
             git tag "v$VERSION"
             git push origin "v$VERSION"
-          } else {
-            echo "Tag v$VERSION already exists. Skipping tag creation."
+            echo "TAG_EXISTS=false" >> $env:GITHUB_ENV
           }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
-
       - name: Create GitHub release
         uses: softprops/action-gh-release@v1
+        if: env.TAG_EXISTS == 'false'
         with:
           files: |
             ./dist/**/*
+          tag_name: v${{ fromJson(readFile('package.json')).version }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Upload release to GitHub
+        if: env.TAG_EXISTS == 'false'
         run: yarn electron-builder --win
