--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,6 +30,7 @@ jobs:
         id: create_tag
         run: |
           $VERSION = (Get-Content package.json | ConvertFrom-Json).version
+          echo "VERSION=$VERSION" >> $env:GITHUB_ENV
           git config --global user.name "GitHub Actions"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
           
@@ -53,7 +54,7 @@ jobs:
         with:
           files: |
             ./dist/**/*
-          tag_name: v${{ fromJson(readFile('package.json')).version }}
+          tag_name: v${{ env.VERSION }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
